--- a/_posts/2020-05-20-first.markdown
+++ b/_posts/2020-05-20-first.markdown
@@ -9,7 +9,8 @@ tags:
 ---
 吐槽：
 
-- github账号
+- 虽然有github账号，只是有账号，里面好多东西不懂
 - 本地调试的话还要装jekyll，而它又依赖ruby...,不同主题还和版本有关系...,跑不动
 - 还不会jekyll语法，改不动，难受
 - 没有前端基础，学不来
+- 建议放弃，当我只是建议^-^
